[package]
name = "manifest"
version = "0.1.0"
authors = ["Sean Leather <sean.leather@gmail.com>"]
edition = "2018"

[dependencies]
duct = "0.11"
log = "0.4"
os_pipe = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
stderrlog = "0.4"
structopt = "0.2"
tempfile = "3.0"
url = "1.7"
url_serde = "0.2"
walkdir = "2.2"
which = "2.0"
